Alignment issue

--- a/CSS/resource.css
+++ b/CSS/resource.css
@@ -373,7 +373,7 @@ header #nav-menu #secondary .btn:hover{
       background-color: white;
       justify-content: center;
       padding-top: 1%;
-      margin-top: -3%;
+      margin-top: -2%;
       position: absolute;
       margin-left: 10.5%;
     }
